--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2445701_4uy2qpd7cgf.css">
   <!-- <script src="//cdn.jsdelivr.net/npm/xgplayer@2.9.6/browser/index.js" type="text/javascript"></script> -->
   <title><%= htmlWebpackPlugin.options.title %></title>
